
	* src/nact/base-assistant.c:
	Move GtkBuilder to private data structure to be able to unref it.

	* src/nact/nact-clipboard.c:
	Recursively renumber NAObjectItem when needed.

	* src/nact/nact-clipboard.c:
	* src/nact/nact-iactions-list.c:
	* src/nact/nact-tree-model.c: Fix cut/copy/paste functions.
	nact_tree_model_update_parent(): removed function.

	* src/nact/nact-iactions-list.c:
	Set selection on last level 1 inserted row.

	* src/nact/nact-main-menubar.c (on_new_profile_activated): Fixed.

	* src/nact/nact-window.c:
	* src/nact/nact-window.h (nact_window_count_level_zero_items):
	New	function.

	* src/nact/nact-assistant-export.ui: New file (see #579345).

	* src/nact/nautilus-actions-config-tool.ui:
	Renumber items (see #579345).

	* src/nact/Makefile.am: Updated accordingly.

2009-09-17 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-iio-provider.c
	(get_merged_items_list,	sort_tree):
	* src/common/na-iio-provider.h
	(read_items_list, na_iio_provider_get_items_tree):
	* src/common/na-gconf-provider.c (iio_provider_read_items_list):
	Now use a GList instead of a GSList (shorter, more powerful).

	* src/common/na-object-api.h (na_object_set_new_id):
	Fix declaration.

	* src/common/na-object-id.c (new_id): New virtual function.
	(na_object_id_set_new_id): new corresponding API.
	Implements a 'most-derived' model.

	* src/common/na-object-item.c:
	Subitems are now managed in a GList instead of a GSList.

	* src/common/na-obj-action.c:
	* src/common/na-obj-menu.c:
	* src/common/na-pivot.c:
	* src/common/na-pivot.h:
	* src/common/na-xml-writer.c:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-clipboard.c:
	* src/nact/nact-clipboard.h:
	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h:
	* src/nact/nact-main-menubar.c
	* src/nact/nact-main-window.c:
	* src/nact/nact-tree-model.c:
	* src/plugin/nautilus-actions.c:
	* src/utils/nautilus-actions-new.c: Updated accordingly.

	* src/nact/nact-iactions-list.c (filter_selection,